-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.6, 5.2.0
-
None
-
Windows 7 64 bit
-
eac2876d55732696991c4629e6bd88e302a72f56 (5.4 , 8.9.2014, 5.4)
Unlike QMainWindow and QDialog, a floating QDockWidget does not get repositioned when the screen layout (number of screens) is changed so that the DockWindow is not visible anymore.
Typical use cases are removing a laptop from its docking station (with multi-screen setup) or remote connecting to a computer that has multiple screens. In theses scenarios it is impossible to reach the floating DockWindow that was positioned on a screen which is now not visible anymore.
- relates to
-
QTBUG-36659 Windows QPA should emit WindowScreenChangedEvent when appropriate
-
- Closed
-
For Gerrit Dashboard: QTBUG-39320 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
90455,1 | Windows: Move dock windows automatically when screen is disconnected. | dev | qt/qtbase | Status: ABANDONED | +1 | 0 |
93132,2 | Windows: Move dock windows automatically when screen is disconnected. | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |