Windows: Move dock windows automatically when screen is disconnected.

Windows does not automatically move WS_EX_TOOLWINDOW type windows.

Task-number: QTBUG-39320
Change-Id: If9804f32beb534a27ba649abf5eaceb686af8f50
Reviewed-by: Björn Breitmeyer <bjoern.breitmeyer@kdab.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: eac2876d55732696991c4629e6bd88e302a72f56 https://github.com/qt/qtbase/commit/eac2876d55732696991c4629e6bd88e302a72f56