src/plugins/platforms/windows/qwindowsscreen.cpp
@@ -16,6 +16,7 @@ DECL|function|monitorData
 DECL|function|monitorData
 DECL|function|monitorEnumCallback
 DECL|function|monitorResolutionEnumCallback
+DECL|function|moveToVirtualScreen
 DECL|function|operator <<
 DECL|function|removeScreen
 DECL|function|screenOf
